--- a/templates/controlleur_statistiques/statistiques.html.twig
+++ b/templates/controlleur_statistiques/statistiques.html.twig
@@ -10,7 +10,11 @@
         }
 
         #navbarSupportedContent {
-            padding-left: 80%;
+            padding-left: 75%;
+        }
+
+        #plage_min {
+            width: 20%;
         }
 
         #tab1, #durees {
@@ -40,14 +44,15 @@
 {% block body %}
 
     <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="/controlleur/statistiques/badgeages">SUAPS</a>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <a class="navbar-brand" href="#" onclick="statistiquesAccueil()">SUAPS</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            
+
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <div class="form-inline my-2 my-lg-0" id="formulaire">
+                    <input id="plage_min" type="text" class="form-control mr-sm-2" placeholder="Plage" onchange="changePlage(this.value)"/>
                     <input id="date_jour" class="form-control mr-sm-2" type="date" placeholder="Entrer une date" aria-label="Entrer une date" value="" onchange="badgeagesJour()"/>
                     <button class="btn btn-outline-success my-2 my-sm-0" onclick="badgeagesJour()">Résultat</button>
                 </div>
@@ -142,12 +147,20 @@
                     </div>
                 </div>
             </div>
+
+            <div class="container">
+                <div class="d-flex justify-content-center">
+                    <button type="button" class="btn btn-outline-secondary btn-lg">Importer les données au format csv</button>
+                </div>
+            </div>
         {% endif %}
         </div>
     </div>
 {% endblock %}
 
 {% block javascripts %}
+    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>-->
+
     {# Librairie Chart.js pour les graphiques #}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 
@@ -165,31 +178,34 @@
             donnees.push(resultat_creneau[i].array_result.length);
         }
 
-        var ctx = document.getElementById('graphique').getContext('2d');
+        if (donnees.length !== 0) {
 
-        var chart = new Chart(ctx, {
-            // The type of chart we want to create
-            type: 'bar',
+            var ctx = document.getElementById('graphique').getContext('2d');
 
-            // The data for our dataset
-            data: {
-                labels: etiquettes,
-                datasets: [{
-                    label: "Nombre de personnes présentes sur plage horaire",
-                    backgroundColor: 'rgb(0, 120, 120)',
-                    borderColor: 'rgb(0, 120, 120)',
-                    data: donnees,
-                }]
-            },
+            var chart = new Chart(ctx, {
+                // The type of chart we want to create
+                type: 'bar',
 
-            // Configuration options go here
-            options: {
-                title: {
-                    display: true,
-                    text: "Vue graphique du taux de présence sur les plages horaires"
+                // The data for our dataset
+                data: {
+                    labels: etiquettes,
+                    datasets: [{
+                        label: "Nombre de personnes présentes sur plage horaire",
+                        backgroundColor: 'rgb(0, 120, 120)',
+                        borderColor: 'rgb(0, 120, 120)',
+                        data: donnees,
+                    }]
+                },
+
+                // Configuration options go here
+                options: {
+                    title: {
+                        display: true,
+                        text: "Vue graphique du taux de présence sur les plages horaires"
+                    }
                 }
-            }
-        });
+            });
+        }
     </script>
 
     <script>
@@ -207,13 +223,45 @@
             document.getElementById("jour").innerHTML = "du " + d_str;
         }
 
+        var default_plage_value = "30";
+
+        var plage = document.getElementById("plage_min");
+
+        // Initialisation du champ des plages horaires
+        if (plage.value == "") {
+            var currentPlage = localStorage.getItem("suaps_current_plage");
+            plage.value = (currentPlage !== null) ? currentPlage : default_plage_value;
+            localStorage.setItem("suaps_current_plage", plage.value);
+        }
+        console.log(plage.value);
+
+        function changePlage(value) {
+            if (plage.value == "" || isNaN(parseInt(plage.value))) {
+                alert("Il est nécessaire de renseigner la plage en minutes !");
+                return;
+            }
+            plage.value = value;
+            localStorage.setItem("suaps_current_plage", value);
+            badgeagesJour();
+        }
+
         function badgeagesJour() {
             jour = document.getElementById("date_jour").value;
             if (jour == "") {
-                alert("La date est requise");
+                alert("La date est requise !");
                 return;
             }
-            var url = "/controlleur/statistiques/badgeages/jour/" + jour;
+            if (plage.value == "" || isNaN(parseInt(plage.value))) {
+                alert("Il est nécessaire de renseigner la plage en minutes !");
+                return;
+            }
+            var url = "/controlleur/statistiques/badgeages/jour/" + jour + "/" + plage.value;
+            window.location = url;
+        }
+
+        function statistiquesAccueil() {
+            var url = "/controlleur/statistiques/badgeages";
+            url = url + "/" + plage.value;
             window.location = url;
         }
     </script>
