--- a/templates/controlleur_statistiques/statistiques.html.twig
+++ b/templates/controlleur_statistiques/statistiques.html.twig
@@ -44,6 +44,7 @@
 {% block body %}
 
     <div class="container-fluid">
+        {# Bar de navigation #}
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <a class="navbar-brand" href="#" onclick="statistiquesAccueil()">SUAPS</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -304,7 +305,6 @@
             plage.value = (currentPlage !== null) ? currentPlage : default_plage_value;
             localStorage.setItem("suaps_current_plage", plage.value);
         }
-        console.log(plage.value);
 
         function changePlage(value) {
             if (plage.value == "" || isNaN(parseInt(plage.value))) {
