--- a/templates/controlleur_affichage/listeEtudiantPresent.html.twig
+++ b/templates/controlleur_affichage/listeEtudiantPresent.html.twig
@@ -8,6 +8,11 @@
 
 {% endblock %}
 
+{% block refresh %}
+    <!-- La page se réactualise automatiquement -->
+    <meta http-equiv="Refresh" content="6">
+{% endblock %}
+
 {% block body %}
 
     <div class="container-fluid pt-3 text-left text-capitalize">
