--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
         {% block stylesheets %}{% endblock %}
     </head>
     
-    <body>
+    <body style="background-color: #D9D9D9">
         <div>
             <!-- Les affichages web seront dans ce bloc -->
             {% block body %}{% endblock %}
