b-PageConnexion : gestion de login + déconnexion

--- a/templates/controlleur_affichage/listeEtudiantPresent.html.twig
+++ b/templates/controlleur_affichage/listeEtudiantPresent.html.twig
@@ -119,6 +119,12 @@
             <div id="mon_timer" class="d-flex" style="font-size:200%">
                 <div id="txt"></div>
             </div>
+
+            <div class="deconnexion">
+                <a class="btn btn-danger" href="\deconnect" role="button">Déconnexion</a>
+
+            </div>
+
             <div style="font-size:230%">
                 {{ tailleDuTableauPresent }} / {{ capacite }}
             </div>
